result/namespaces/err_10.xml.err
./test/namespaces/err_10.xml:1: error: Attribute xmlns redefined
<tst xmlns="http://example.com/" xmlns="http://example.com/"/>
                                                            ^
